--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Servicios Profesionales | TuNombre</title>
+    <title>Servicios Profesionales | Jair Pulido</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="text-gray-800 font-sans">
 
     <!-- NAV -->
     <nav class="flex items-center justify-between px-8 py-4 shadow">
-      <div class="text-2xl font-bold">TuNombre</div>
+      <div class="text-2xl font-bold">Jair Pulido</div>
       <ul class="flex space-x-6 text-sm font-medium">
         <li><a href="#servicios" class="hover:text-blue-600">Servicios</a></li>
         <li><a href="#clientes" class="hover:text-blue-600">Clientes</a></li>
@@ -62,7 +62,7 @@
       <h2 class="text-3xl font-bold text-center mb-6">Hablemos</h2>
       <p class="text-center mb-8">¿Listo para llevar tu proyecto al siguiente nivel?</p>
       <div class="flex justify-center">
-        <a href="mailto:contacto@tunombre.com" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-gray-100 transition">
+        <a href="mailto:contacto@Jair Pulido.com" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-gray-100 transition">
           Enviar un correo
         </a>
       </div>
@@ -71,7 +71,7 @@
     <!-- FOOTER -->
     <footer class="bg-gray-800 text-white py-8 px-8">
       <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center">
-        <p>&copy; 2025 TuNombre. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Jair Pulido. Todos los derechos reservados.</p>
         <div class="flex space-x-4 mt-4 md:mt-0">
           <a href="#" class="hover:text-blue-400">LinkedIn</a>
           <a href="#" class="hover:text-blue-400">Twitter</a>
